--- a/examples/navbar/navbar.html
+++ b/examples/navbar/navbar.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
 </head>
 <body>
     <script src="../../src/basicUI.js"></script>
-    <script src="example.js"></script>
+    <script src="navbar.js"></script>
 </body>
 </html>
