--- a/examples/body/body.html
+++ b/examples/body/body.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <style>
+        .testClass {
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <script src="../../src/basicUI.js"></script>
