--- a/flashcards/index.html
+++ b/flashcards/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/gh/BekhruzSNiyazov/basicUI@2.0.0/src/basicUI.js"></script>
+    <script src="../src/basicUI.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
